changed code as per updated requirement.