@@ -1,9 +1,9 @@
 package com.kovan.junitTestCases;
 
-import com.kovan.entities.Address;
-import com.kovan.entities.Order;
-import com.kovan.entities.User;
+import com.kovan.entities.*;
+import com.kovan.repository.BookRepository;
 import com.kovan.repository.OrderRepository;
+import com.kovan.repository.PaymentRepository;
 import com.kovan.service.AddressService;
 import com.kovan.service.OrderService;
 import com.kovan.service.UserService;
@@ -16,7 +16,8 @@ import java.time.LocalDate;
 import java.util.List;
 import static org.mockito.Mockito.*;
 import static org.junit.jupiter.api.Assertions.*;
-import static java.util.Optional.of;
+import java.util.Optional;
+import static org.mockito.ArgumentMatchers.any;
 
 @ExtendWith(MockitoExtension.class)
 class OrderServiceTest {
@@ -29,6 +30,12 @@ class OrderServiceTest {
 
     @Mock
     private AddressService addressService;
+
+    @Mock
+    private PaymentRepository paymentRepository;
+
+    @Mock
+    private BookRepository bookRepository;
 
     @InjectMocks
     private OrderService orderService;
@@ -44,36 +51,48 @@ class OrderServiceTest {
             .city("Test City")
             .build();
 
+    private final Book book = Book.builder()
+            .bookId(1L)
+            .title("Test Book")
+            .stockQuantity(10)
+            .build();
+
+    private final OrderItem orderItem = OrderItem.builder()
+            .orderItemId(1L)
+            .book(book)
+            .quantity(2)
+            .unitPrice(20.00)
+            .totalPrice(40.00)
+            .build();
+
     private final Order order = Order.builder()
             .orderId(1L)
             .orderDate(LocalDate.now())
             .orderStatus("PENDING")
             .user(user)
             .shippingAddress(address)
+            .orderItems(List.of(orderItem))
             .build();
 
     @Test
     void testCreateOrder() {
-
         when(userService.getUserById(user.getUserId())).thenReturn(user);
         when(addressService.getAddressesById(address.getAddressId())).thenReturn(address);
         when(orderRepository.save(any(Order.class))).thenReturn(order);
 
         Order result = orderService.createOrder(order);
 
-
         assertNotNull(result);
         assertEquals(order.getOrderId(), result.getOrderId());
         assertEquals(order.getOrderStatus(), result.getOrderStatus());
         verify(userService, times(1)).getUserById(user.getUserId());
         verify(addressService, times(1)).getAddressesById(address.getAddressId());
-        verify(orderRepository, times(1)).save(order);
+        verify(orderRepository, times(1)).save(any(Order.class));
     }
 
     @Test
     void testGetOrderById() {
-
-        when(orderRepository.findById(order.getOrderId())).thenReturn(of(order));
+        when(orderRepository.findById(order.getOrderId())).thenReturn(Optional.of(order));
 
         Order result = orderService.getOrderById(order.getOrderId());
 
@@ -84,8 +103,7 @@ class OrderServiceTest {
 
     @Test
     void testGetOrderByIdThrowsExceptionWhenNotFound() {
-
-        when(orderRepository.findById(order.getOrderId())).thenReturn(java.util.Optional.empty());
+        when(orderRepository.findById(order.getOrderId())).thenReturn(Optional.empty());
 
         assertThrows(RuntimeException.class, () -> orderService.getOrderById(order.getOrderId()));
         verify(orderRepository, times(1)).findById(order.getOrderId());
@@ -93,7 +111,6 @@ class OrderServiceTest {
 
     @Test
     void testGetAllOrders() {
-
         List<Order> orders = List.of(order);
         when(orderRepository.findAll()).thenReturn(orders);
 
@@ -101,18 +118,17 @@ class OrderServiceTest {
 
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(order, result.getFirst());
+        assertEquals(order, result.get(0));
         verify(orderRepository, times(1)).findAll();
     }
 
     @Test
     void testUpdateOrder() {
-
         Order updatedOrder = Order.builder()
                 .orderStatus("COMPLETED")
                 .build();
 
-        when(orderRepository.findById(order.getOrderId())).thenReturn(of(order));
+        when(orderRepository.findById(order.getOrderId())).thenReturn(Optional.of(order));
         when(orderRepository.save(any(Order.class))).thenReturn(order);
 
         Order result = orderService.updateOrder(order.getOrderId(), updatedOrder);
@@ -120,20 +136,31 @@ class OrderServiceTest {
         assertNotNull(result);
         assertEquals("COMPLETED", result.getOrderStatus());
         verify(orderRepository, times(1)).findById(order.getOrderId());
-        verify(orderRepository, times(1)).save(order);
+        verify(orderRepository, times(1)).save(any(Order.class));
     }
 
     @Test
     void testCancelOrder() {
+        Payment payment = Payment.builder()
+                .paymentId(1L)
+                .paymentStatus("COMPLETED")
+                .transactionQuantity(2)
+                .build();
 
-        when(orderRepository.findById(order.getOrderId())).thenReturn(of(order));
+        order.setPayment(payment);
+
+        when(orderRepository.findById(order.getOrderId())).thenReturn(Optional.of(order));
         when(orderRepository.save(any(Order.class))).thenReturn(order);
+        when(paymentRepository.save(any(Payment.class))).thenReturn(payment);
+        when(bookRepository.findById(book.getBookId())).thenReturn(Optional.of(book));
 
         orderService.cancelOrder(order.getOrderId());
 
         assertEquals("CANCELLED", order.getOrderStatus());
         verify(orderRepository, times(1)).findById(order.getOrderId());
-        verify(orderRepository, times(1)).save(order);
+        verify(orderRepository, times(1)).save(any(Order.class));
+        verify(paymentRepository, times(1)).save(any(Payment.class));
+        verify(bookRepository, times(1)).save(any(Book.class));
     }
 }
 
